--- a/resume/resume.html
+++ b/resume/resume.html
@@ -84,7 +84,7 @@
         </footer>
       </div>
 
-      <a class="button" href="#">下载 PDF 简历</a>
+      <a class="button" href="img/">下载 PDF 简历</a>
 
       <p>
         Ryan，前端工程师<br>
